# milicookie_news

./: celerybeat-schedule  crew_execution_log.txt  db.sqlite3  dump.rdb  manage.py  requirements.txt
config/: asgi.py  celery.py  settings.py  settings_append.py  urls.py  wsgi.py
dashboard/: views.py
new_agent_scraping/: README.md  pyproject.toml
new_agent_scraping/src/multi_site_news_article_scraping_automation/: crew.py  main.py
new_agent_scraping/src/multi_site_news_article_scraping_automation/config/: agents.yaml  tasks.yaml
newsletters/: admin.py  models.py  tasks.py  views.py
newsletters/migrations/: 0001_initial.py
services/: email_service.py
services/crew_service/: crew.py
services/crew_service/config/: agents.yaml  tasks.yaml
subscribers/: admin.py  models.py  views.py
subscribers/migrations/: 0001_initial.py
templates/: admin_custom.html  archive.html  base.html  email_template.html  home.html  newsletter_detail.html  research.html
templates/emails/: newsletter.html
