[project]
name = "multi_site_news_article_scraping_automation"
version = "0.1.0"
description = "multi_site_news_article_scraping_automation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.9.3",
    "firecrawl-py",
]

[project.scripts]
multi_site_news_article_scraping_automation = "multi_site_news_article_scraping_automation.main:run"
run_crew = "multi_site_news_article_scraping_automation.main:run"
train = "multi_site_news_article_scraping_automation.main:train"
replay = "multi_site_news_article_scraping_automation.main:replay"
test = "multi_site_news_article_scraping_automation.main:test"
run_with_trigger = "multi_site_news_article_scraping_automation.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
